--- a/public/css/style.css
+++ b/public/css/style.css
@@ -102,7 +102,7 @@ a img:hover {
   box-sizing: border-box;
 }
 
-.samuraimart-login-input {
+.login-input {
   border-radius: 2px;
   border: solid 1px #b2b2b2;
   background-color: #ffffff;
